--- a/_posts/2014-12-31-year.markdown
+++ b/_posts/2014-12-31-year.markdown
@@ -44,7 +44,7 @@ Here's the highlights:
   [LADIS '14][ladis].
 
 Above all, however, have been the friendships that I've developed during
-the process of traveling to all of these locations; Specifically, João
+the process of traveling to all of these locations; specifically, João
 Leitão, Nuno Preguiça, Marc Shapiro, Peter Van Roy, Annette Bieniusa,
 Carlos Baquero, Paulo Sérgio Almeida, Carla Ferreira, Alejandro Tomsic,
 Manuel Bravo, Zhongmiao Li, Deepthi Akkoorath, Tyler Crain, and Mahsa
