--- a/_posts/2015-08-01-phd.markdown
+++ b/_posts/2015-08-01-phd.markdown
@@ -19,5 +19,4 @@ Starting in February 2016, I will be moving to Belgium to begin my first
 year of studies at the [Université catholique de
 Louvain](https://www.uclouvain.be/index.html) supervised by [Peter Van
 Roy](https://www.info.ucl.ac.be/~pvr/) followed by a second year in
-Lisbon at [IST](http://tecnico.ulisboa.pt/en/) supervised by [Luís
-Rodrigues](http://www.gsd.inesc-id.pt/~ler/).
+Lisbon at [IST](http://tecnico.ulisboa.pt/en/).
