--- a/_posts/2015-09-03-worst.markdown
+++ b/_posts/2015-09-03-worst.markdown
@@ -29,7 +29,7 @@ work.
 
 In summary, I propose an alternative to “Hanlon’s Razor”:
 
-“Never attribute to malice to that which is adequately explained by a
+“Never attribute to malice, that which is adequately explained by a
 lack of exhaustive search to the researcher.”
 
 We’re all human and we make mistakes whether we know it or not.  But, let us
