--- a/_posts/2015-10-27-tendency.markdown
+++ b/_posts/2015-10-27-tendency.markdown
@@ -22,7 +22,7 @@ Rather unfortunately, this statement does not say much about when a particular u
 
 So, the question naturally follows: why are all of these consistency models required and why would one choose a rather weak model when you can pick a stronger model?
 
-The answer is that consistency, or what guarantees we can make about when updates will be visible in the system, is fundamentally at odds with availability [1], the ability for a system to keep functioning in the event that some or all of the nodes in the system can not communicate with one another [Gibert and Lynch](https://www.comp.nus.edu.sg/~gilbert/pubs/BrewersConjecture-SigAct.pdf).  Weaker consistency models that offer fewer guarantees about when the effect of an update might be observed in the system can offer higher availability, allowing the system to continue to operate while it is offline, where stronger models might prohibit updates when nodes can not communicate, to enforce that all nodes see all effects in the same order.
+The answer is that consistency, or what guarantees we can make about when updates will be visible in the system, is fundamentally at odds with availability [1], the ability for a system to keep functioning in the event that some or all of the nodes in the system can not communicate with one another ([Gibert and Lynch](https://www.comp.nus.edu.sg/~gilbert/pubs/BrewersConjecture-SigAct.pdf)).  Weaker consistency models that offer fewer guarantees about when the effect of an update might be observed in the system can offer higher availability, allowing the system to continue to operate while it is offline, where stronger models might prohibit updates when nodes can not communicate, to enforce that all nodes see all effects in the same order.
 
 To demonstrate, let us take an example from [Sebastian Burckhardt's work](http://research.microsoft.com/apps/pubs/default.aspx?id=230852) on eventual consistency.  Consider the case where two machines are used to manage seat reservations for an airplane flight: we use two machines to increase our tolerance to failure, so each machine must have a replica of all of the information.  Two users of the system, Tom and Chris, want to book the one remaining seat on the same flight.  Both Tom and Chris concurrently issue a request to a different replica.
 
