--- a/_posts/2015-10-27-tendency.markdown
+++ b/_posts/2015-10-27-tendency.markdown
@@ -12,7 +12,7 @@ _We posit that striving for distributed systems that provide "single system imag
 ## Eventual Consistency
 When we think about the world we live in, we do not usually say it is eventually consistent, for this is a term usually applied to computing systems, made up of multiple machines, that have to operate with shared information.
 
-Eventual consistency is a consistency model for replicated, shared state.  A consistency model is a contract between an application developer and a system that application will run on.  A contract between a developer and a system states the following: given the developer follows the rules defined by the system, certain outcomes from the system are guaranteed.  This makes it possible for developers to build successful applications, for without this contract, applications would have no guarantee that the actions they perform would have a correct outcome.
+Eventual consistency is a consistency model for replicated, shared state.  A consistency model is a contract between an application developer and a system that an application will run on.  A contract between a developer and a system states the following: given the developer follows the rules defined by the system, certain outcomes from the system are guaranteed.  This makes it possible for developers to build successful applications, for without this contract, applications would have no guarantee that the actions they perform would have a correct outcome.
 
 A consistency model specifies rules about when the effect of an update will be visible to the members of a system: or more formally, a consistency model defines possible orders and interleavings that events will be observed by different parties in the same system.  For instance, a strong consistency model such as [linearizability](https://cs.brown.edu/~mph/HerlihyW90/p463-herlihy.pdf), states that as soon as you perform an update you can see the effects of that update immediately, or that the system closely approximates the physical time order of events.  A weak consistency model might place no bound on when the effect of an update will be visible.  Eventual consistency is a extremely weak model and is only informally specified as follows:
 
@@ -33,7 +33,7 @@ If network connectivity between the two systems is interrupted at the time of th
 
 If we choose the weak consistency model that affords us higher availability, we need to address the problem of concurrent modifications to shared state.  In our previous example, how do we decide to resolve the concurrent seat bookings: who "wins" the seat?
 
-What ever method we choose, the decision must be deterministic if we want to ensure that all copies of the shared state arrive at the same value once all of the updates have been delivered in the system.  Ideally these [conflict resolution functions](http://dl.acm.org/citation.cfm?id=224070) should be tolerant to message reordering and message duplication ([Shapiro et al](http://hal.upmc.fr/inria-00555588/document)) to ensure correct execution on an unreliable, asynchronous network.
+What method we choose, the decision must be deterministic if we want to ensure that all copies of the shared state arrive at the same value once all of the updates have been delivered in the system.  Ideally these [conflict resolution functions](http://dl.acm.org/citation.cfm?id=224070) should be tolerant to message reordering and message duplication ([Shapiro et al](http://hal.upmc.fr/inria-00555588/document)) to ensure correct execution on an unreliable, asynchronous network.
 
 ## The World is Eventually Consistent
 There is a reason that eventual consistency keeps coming up: it is fundamentally part of how systems in the real world operate.  Let us consider a few examples.
@@ -41,7 +41,7 @@ There is a reason that eventual consistency keeps coming up: it is fundamentally
 ### Recorded Knowledge
 The first example looks at recorded knowledge in a particular field as an approximation of that knowledge in the physical world.
 
-For instance, if the leading researchers on breast cancer were to document the state-of-the-art in a book, as the document is being written it would no longer reflect the state-of-the-art.  The collective knowledge of this group is always changing, and as long as we continue to rewrite the document it will only be approaching the combined knowledge of the group.  We can think of this somewhat formally: if we had a way to view the group's knowledge as a omniscient observer and we represent that knowledge as a linear function, the recorded text would be asymptotic to function of the sum of global  knowledge.
+For instance, if the leading researchers on breast cancer were to document the state-of-the-art in a book, as the document is being written it would no longer reflect the state-of-the-art.  The collective knowledge of this group is always changing, and as long as we continue to rewrite the document it will only be approaching the combined knowledge of the group.  We can think of this somewhat formally: if we had a way to view the group's knowledge as a omniscient observer and we represent that knowledge as a linear function, the recorded text would be asymptotic to the function of the sum of global  knowledge.
 
 ### Message Passing
 Members of the same system exchange information by sending messages containing information to each other.  These messages between members of the system can be arbitrarily dropped and delayed, just like in traditional, unreliable, asynchronous networks.  We can find many analogs to these messages in the physical world: letters sent via the postal service, text messages, and telephone calls are all such examples.
@@ -59,7 +59,7 @@ Let us return to the example of recorded knowledge.  If we alter the way we comm
 To simplify the idea of causal consistency with our original example, as each researcher learned a new piece of knowledge, the recorded text would be updated in the same order the knowledge was learned.  This is different from a weaker model where the recorded text may be updated in an arbitrary, but complete, order.
 
 ## The Database as an Optimization
-We consider the idea of a world-scale distributed system as a connected graph, where each node is a member of this system, and the primary site for some information.  The traditional database is an optimization this graph.  When you take a subgraph and reduce it to a single node in the graph what results is an overlay network consisting of databases.
+We consider the idea of a world-scale distributed system as a connected graph, where each node is a member of this system, and the primary site for some information.  The traditional database is an optimization of this graph.  When you take a subgraph and reduce it to a single node in the graph what results is an overlay network consisting of databases.
 
 Consider the following example.  If we take all of the information known by all of the people living in Japan and reduce it to a single node; similarly, we can do the same action for all of the United States, Europe, and the other countries in the world.  If we then connect each of these nodes together, the result resembles a eventually consistent, partially-replicated, geo-replicated database.
 
@@ -69,7 +69,7 @@ If we return to our example of breast cancer research, we can imagine that resea
 
 While just an optimization, this optimization is extremely important for several reasons.  It would be extremely impractical to have to hear information directly from the primary site every time you needed information: this optimization makes for extremely efficient distribution of information.  Therefore, this optimization is important for both providing low latency, high-availability, and fault-tolerance of the system.
 
-We have designed many of our abstractions in computing against this optimization: clients communicate with servers that are assumed to be the canonical source of some information.  Clients repeatedly retry sending state to a server where the information is not considered persisted unless the operation completes: files living on file servers uploaded by their authors where the source of truth is really their machines.
+We have designed many of our abstractions in computing against this optimization: clients communicate with servers that are assumed to be the canonical source of some information.  Clients repeatedly retry sending state to a server where the information is not considered persisted unless the operation completes, when in reality the file living on the client is the source of truth.
 
 As we enable Internet of Things applications and mobile applications running on smartphones become more and more commonplace, we continue to move closer to a design space where our traditional models of computation and centrally locating data is problematic.  Internet of Things devices today usually stream data back to a centralized data center for processing with systems like Spark and Hadoop.  Mobile applications treat the mobile device as a client in a system where a central database is used for storing and retrieving information.  These designs are inherently limiting: we impose a structure of a single source of truth for information because it makes processing easier with the tools that we have today.
 
@@ -80,11 +80,11 @@ Suppose we had mergeable data items that existed in time and space: with two cop
 
 We can use these mergeable data structures as the basis for a programming model.  Consider the extension to a functional programming language where the primitive data structures in this language are all mergeable data structures.  In this model, the results of the executions of programs are also mergeable.  These computations carry along with them the information about the data items that have contributed to generating their result, and these computations themselves are also mergeable.  In systems like Spark, this may remind you of the notion of lineage.
 
-In this model, each member of the system has some partially-replicated knowledge and some knowledge that they are the primary site for.  This information is exchanged between members of the system and merged with each members local information: this provides both fault-tolerance, and lower latency in servicing requests for information from peers.
+In this model, each member of the system has some partially-replicated knowledge and some knowledge that they are the primary site for.  This information is exchanged between members of the system and merged with each member's local information: this provides both fault-tolerance, and lower latency in servicing requests for information from peers.
 
 This knowledge provides the basis for local computations: for instance, using some local information to compute some result.  This result will approach the true global value asymptotically, but will never be reached.  The results of these computations will be mergeable themselves: for instance, if two members have computed over a subset of information.  This has an important analog in the real world: sometimes we care about the result of a computation without actually caring about some, or all, of the input required to generate that result.  The results of computations are first class in this system.
 
-In this model, mobile clients and the servers that service them are all equal.  Clients exchange information and cache results to provide lower latency on servicing requests.  Clients are the source of truth for their own information. The notion of servers are just clients that are located in a particular position in the network, and that are not the source of truth for any data; these nodes serve only to reduce latency in the system by replicating information.
+In this model, mobile clients and the servers that service them are all equal.  Clients exchange information and cache results to provide lower latency on servicing requests.  Clients are the source of truth for their own information. Servers are just clients that are located in a particular position in the network, and that are not the source of truth for any data; these nodes serve only to reduce latency in the system by replicating information.
 
 ## Conclusion
 So, when it has been said that ["Uber Goes Unconventional"](http://highscalability.com/blog/2015/9/21/uber-goes-unconventional-using-driver-phones-as-a-backup-dat.html) by putting canonical state regarding an in progress ride on their devices, eschewing a traditional data center centric approach, how unconventional is it?  Isn't the phone the ultimate source of truth?
@@ -93,7 +93,7 @@ It is.  As we continue to increase the number of globally connected devices, we 
 
 In emerging countries, there still exist a number of devices that transmit data between members using USB devices, sneakernet techniques, and peer to peer communication.  It will most likely be a long time before these devices are connected directly via the public internet, and we must provide computation models that allow for connected devices to communicate with each other and compute a result over some notion of shared data.
 
-The future is in our hands.  Can we build computational abstractions that allow devices to communicate peer-to-peer, acknowledging the true source of truth for a particular piece of information and scale to the amount of information that exists, not only between all computers in a planetary-scale distributed system, but all entities in the universe.
+The future is in our hands.  Can we build computational abstractions that allow devices to communicate peer-to-peer, acknowledging the true source of truth for a particular piece of information and scale to the amount of information that exists, not only between all computers in a planetary-scale distributed system, but all entities in the universe?
 
 I welcome your feedback!
 
