Add arXiv link.

--- a/_posts/2015-10-27-tendency.markdown
+++ b/_posts/2015-10-27-tendency.markdown
@@ -6,8 +6,9 @@ categories: lasp erlang
 group:  SyncFree
 ---
 
-## Abstract
-_We posit that striving for distributed systems that provide "single system image" semantics is fundamentally flawed and at odds with how systems operate in the physical world.  We realize the database as an optimization of this system: a required, essential optimization in practice that facilitates central data placement and ease of access to participants in a system.  We motivate a new model of computation that is designed to address the problems of computation over "eventually consistent" information in a large-scale distributed system._
+The most up-to-date version of this document can be found on [arXiv](http://arxiv.org/abs/1510.08473).
+
+We posit that striving for distributed systems that provide "single system image" semantics is fundamentally flawed and at odds with how systems operate in the physical world.  We realize the database as an optimization of this system: a required, essential optimization in practice that facilitates central data placement and ease of access to participants in a system.  We motivate a new model of computation that is designed to address the problems of computation over "eventually consistent" information in a large-scale distributed system.
 
 ## Eventual Consistency
 When we think about the world we live in, we do not usually say it is eventually consistent, for this is a term usually applied to computing systems, made up of multiple machines, that have to operate with shared information.
