--- a/_posts/2016-03-04-gsoc.markdown
+++ b/_posts/2016-03-04-gsoc.markdown
@@ -2,8 +2,8 @@
 layout: post
 title:  "Lasp and the Google Summer of Code 2016"
 date:   2016-03-03 19:00:00 -0500
-categories: pl
-group: pl
+categories: erlang lasp
+group: SyncFree
 ---
 
 We are pleased to announce that the [BEAM
